[package]
name = "exloli-cat"
version = "0.4.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["cookies", "multipart", "json"] }
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["time", "rt-multi-thread", "macros"] }
tokio-util = "0.7.7"
duration-str = { version = "0.7.1", default-features = false, features = ["serde"] }
chrono = "0.4.38"
toml = "0.8.19"
once_cell = "1.19.0"
regex = "1.10.6"
scraper = "0.20.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
teloxide = { version = "0.12.2", features = ["throttle", "cache-me", "macros"] }
telegraph-rs = { version = "0.6.3", default-features = false, features = ["html"] }
clap = { version = "4.5.13", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dashmap = "6.0.1"
futures = "0.3.30"
glob = "0.3.1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
quircs = "0.10.2"
rand = "0.8.5"
thiserror = "1.0.63"
unicode-width = "0.1.13"
indexmap = { version = "2.3.0", features = ["serde"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
